--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "main.h": "c",
         "uart.h": "c",
-        "core.h": "c"
+        "core.h": "c",
+        "stm32f1xx_hal_uart.h": "c"
     }
 }
