--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "core.h": "c",
         "stm32f1xx_hal_uart.h": "c",
         "clock_config.h": "c",
-        "stimer.h": "c"
+        "stimer.h": "c",
+        "gpio.h": "c"
     }
 }
