--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "gpio.h": "c",
         "rtc.h": "c",
         "stm32f1xx_hal.h": "c",
-        "stm32f1xx_hal_rtc.h": "c"
+        "stm32f1xx_hal_rtc.h": "c",
+        "cmd.h": "c"
     }
 }
