--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "rtc.h": "c",
         "stm32f1xx_hal.h": "c",
         "stm32f1xx_hal_rtc.h": "c",
-        "cmd.h": "c"
+        "cmd.h": "c",
+        "delay.h": "c"
     }
 }
