--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,9 @@
         "i2c.h": "c",
         "ssd1306.h": "c",
         "stm32f1xx.h": "c",
-        "stm32f1xx_hal_conf.h": "c"
+        "stm32f1xx_hal_conf.h": "c",
+        "ssd1306_conf.h": "c",
+        "memory_store.h": "c",
+        "mpu_6500.h": "c"
     }
 }
