--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "stm32f1xx_hal_conf.h": "c",
         "ssd1306_conf.h": "c",
         "memory_store.h": "c",
-        "mpu_6500.h": "c"
+        "mpu_6500.h": "c",
+        "config.h": "c"
     }
 }
